# devolo_home_control_api

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  conftest.py  example.py  mprm_api.py  mydevolo_api.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: convert_todos_to_issues.yml  pre-commit.yml  pythonpackage.yml  pythonpublish.yml
devolo_home_control_api/: __init__.py  devices_collector.py  homecontrol.py  mprm_api.py  mprm_rest.py  mprm_websocket.py  mydevolo.py  mydevolo_api.py
devolo_home_control_api/backend/: __init__.py  mprm.py  mprm_rest.py  mprm_websocket.py
devolo_home_control_api/device_classes/: binary_switch_device.py  device.py
devolo_home_control_api/devices/: __init__.py  gateway.py  zwave.py
devolo_home_control_api/exceptions/: __init__.py  device.py  gateway.py  general.py
devolo_home_control_api/helper/: __init__.py  names.py  string.py  uid.py
devolo_home_control_api/properties/: __init__.py  binary_sensor_property.py  binary_switch_property.py  consumption_property.py  dewpoint_sensor_property.py  humidity_bar_property.py  mildew_sensor_property.py  multi_level_sensor_property.py  multi_level_switch_property.py  property.py  remote_control_property.py  sensor_property.py  settings_property.py  voltage_property.py
devolo_home_control_api/property_classes/: binary_switch_property.py  consumption_property.py  property.py
devolo_home_control_api/publisher/: __init__.py  publisher.py  updater.py
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
tests/: __init__.py  conftest.py  mock_dummy_device.py  mock_gateway.py  mock_metering_plug.py  requirements.txt  test_binary_sensor_property.py  test_binary_switch_property.py  test_consumption_property.py  test_data.json  test_dewpoint_sensor_property.py  test_gateway.py  test_helper.py  test_homecontrol.py  test_humidity_bar_property.py  test_humidity_sensor.py  test_metering_plug.py  test_mildew_sensor_property.py  test_motion_sensor.py  test_mprm.py  test_mprm_rest.py  test_mprm_websocket.py  test_multi_level_sensor_property.py  test_multi_level_switch_property.py  test_mydevolo.py  test_properties.py  test_publisher.py  test_remote_control_property.py  test_setting_property.py  test_settings_property.py  test_shutter.py  test_siren.py  test_thermostat.py  test_updater.py  test_uuid.py  test_voltage_property.py  test_wall_switch.py  test_websocket.py  test_window_contact.py  test_zwave.py
tests/confs/: mydevolo.py
tests/fixtures/: gateway.py  homecontrol.py  homecontrol_binary_sensor.json  homecontrol_binary_switch.json  homecontrol_blinds.json  homecontrol_device_del.json  homecontrol_device_details.json  homecontrol_device_new.json  homecontrol_device_page.json  homecontrol_devices.json  homecontrol_gateway_status.json  homecontrol_grouping.json  homecontrol_humidity_sensor.json  homecontrol_local_session.json  homecontrol_motion_sensor.json  homecontrol_pending_operation.json  homecontrol_remote_control.json  homecontrol_siren.json  homecontrol_thermostat.json  homecontrol_zones.json  httpx.py  mprm.py  mydevolo.py  mydevolo_gateway_details.json  mydevolo_gateway_fullurl.json  mydevolo_gateway_location.json  mydevolo_gateway_status.json  mydevolo_maintenance.json  mydevolo_standard_timezone.json  mydevolo_uuid.json  mydevolo_zwave_products.json  properties.py  publisher.py  requests.py  socket.py  updater.py
tests/mocks/: __init__.py  mock_dnsrecord.py  mock_dummy_device.py  mock_gateway.py  mock_homecontrol.py  mock_humidity_bar_device.py  mock_humidity_sensor_device.py  mock_metering_plug.py  mock_mprm.py  mock_mprm_rest.py  mock_multi_level_sensor_device.py  mock_multi_level_switch_device.py  mock_mydevolo.py  mock_remote_control.py  mock_response.py  mock_service_browser.py  mock_shutter.py  mock_siren.py  mock_websocket.py  mock_websocketapp.py  mock_zeroconf.py
tests/snapshots/: test_homecontrol.ambr  test_metering_plug.ambr  test_mydevolo.ambr  test_shutter.ambr  (+3 more)
(+2 files in other folders)
