[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.black]
line-length = 127

[tool.isort]
combine_as_imports = true
filter_files = true
forced_separate = ["tests"]
line_length = 127
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.design]
max-attributes = 15

[tool.pylint.format]
max-line-length = 127

[tool.pylint.messages_control]
disable = "R0801"
good-names = "id,ip,ws"

[tool.setuptools_scm]
