[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0", "setuptools_scm[toml]>=6.2"]

[project]
authors = [
    { name = "Markus Bong", email = "m.bong@famabo.de" },
    { name = "Guido Schmitz", email = "guido.schmitz@fedaix.de"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "devolo Home Control API in Python"
dependencies = [
    "python-dateutil>=2.8.0",
    "requests>=2.4.0",
    "typing-extensions>=4.1.0;python_version<'3.11'",
    "websocket_client>=0.58.0",
    "zeroconf>=0.38.0",
]
dynamic = [
    "version",
]
license = "GPL-3.0-or-later"
name = "devolo_home_control_api"
readme = "README.md"
requires-python = ">= 3.9"
urls = {changelog = "https://github.com/2Fake/devolo_home_control_api/docs/CHANGELOG.md", homepage = "https://github.com/2Fake/devolo_home_control_api"}

[project.optional-dependencies]
dev = [
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-freezer",
    "requests-mock",
    "syrupy",
]

[tool.black]
line-length = 127

[tool.isort]
combine_as_imports = true
filter_files = true
forced_separate = ["tests"]
line_length = 127
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 127
lint.ignore = ["ANN401", "B024", "COM812", "D203", "D205", "D212", "EM", "FBT001", "N818", "TCH", "TRY300", "TRY400"]
lint.select = ["ALL"]
target-version = "py37"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PT004", "PT011", "S101", "S105"]

[tool.setuptools]
packages = { find = {exclude=["docs*", "tests*"]} }

[tool.setuptools.package-data]
devolo_home_control_api = ["py.typed"]

[tool.setuptools_scm]
